--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="page">
     <header class="header">
-        <img class="header__logo" src="./images/logo.svg" alt="MESTO">
+        <img class="header__logo" src="./images/logo.svg" alt="МЕСТО">
     </header>
     <main>
         <section class="profile">
