--- a/index.html
+++ b/index.html
@@ -16,63 +16,62 @@
         <section class="profile">
             <img class="profile__avatar" src="./images/Jacques-Yves_Cousteau.svg" alt="Жак-Ив Кусто">
             <div class="profile__info">
-                <h1 class="profile__name"></h1>
-                <h2 class="profile__details"></h2>
-                <button class="profile__button" type="submit"></button>
+                <h1 class="profile__name">Жак-Ив Кусто</h1>
+                <p class="profile__details">Исследователь океана</p>
+                <button class="profile__edit-button" type="button" aria-label="edit"></button>
             </div>
-            <button class="profile__addButton"></button>
+            <button class="profile__add-button" type="button" aria-label="add"></button>
         </section>
         <section class="location">
-            <ul class="element">
-                <li class="element__item">
+            <ul class="location__elements">
+                <li class="element">
                     <img class="element__image" src="./images/bordeux.jpg" alt="Виноградник">
                     <h2 class="element__title">Новая Аквитания</h2>
-                    <button class="element__likeButton" type="submit"></button>
+                    <button class="element__like-button" type="button" aria-label="like"></button>
                 </li>
-                <li class="element__item">
+                <li class="element">
                     <img class="element__image" src="./images/riefs.jpg" alt="Риф вид сверху">
                     <h2 class="element__title">Большой Барьерный риф</h2>
-                    <button class="element__likeButton" type="submit"></button>
+                    <button class="element__like-button" type="button" aria-label="like"></button>
                 </li>
-                <li class="element__item">
+                <li class="element">
                     <img class="element__image" src="./images/amazon.jpg" alt="Река Амазонка">
                     <h2 class="element__title">Амазония</h2>
-                    <button class="element__likeButton" type="submit"></button>
+                    <button class="element__like-button" type="button" aria-label="like"></button>
                 </li>
-                <li class="element__item">
+                <li class="element">
                     <img class="element__image" src="./images/madagacsar.jpg" alt="Африканский пейзаж">
                     <h2 class="element__title">Мадагаскар</h2>
-                    <button class="element__likeButton" type="submit"></button>
+                    <button class="element__like-button" type="button" aria-label="like"></button>
                 </li>
-                <li class="element__item">
+                <li class="element">
                     <img class="element__image" src="./images/new_zealand.jpg" alt="Утес">
                     <h2 class="element__title">Новая Зеландия</h2>
-                    <button class="element__likeButton" type="submit"></button>
+                    <button class="element__like-button" type="button" aria-label="like"></button>
                 </li>
-                <li class="element__item">
+                <li class="element">
                     <img class="element__image" src="./images/antarctica.jpg" alt="Пингвины купаются">
                     <h2 class="element__title">Антарктида</h2>
-                    <button class="element__likeButton" type="submit"></button>
+                    <button class="element__like-button" type="button" aria-label="like"></button>
                 </li>
             </ul>
         </section>
 
-        <div class="popup popup_hidden">
-            <div class="popup__container">
-                <button class="popup__close"></button>
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <form class="popup__form">
-                    <input class="popup__name">
-                    <input class="popup__details">
-                </form>
-                <button class="popup__saveButton">Cохранить</button>
-            </div>
-        </div>
     </main>
     <footer class="footer">
-        <p>&#169; 2023 Mesto Russia</p>
+        <p class="footer__sign">&#169; 2023 Mesto Russia</p>
     </footer>
-
+    <div class="popup">
+        <div class="popup__container">
+            <button class="popup__close-button" type="button" aria-label="close"></button>
+            <h2 class="popup__title" type="button">Редактировать профиль</h2>
+            <form class="popup__form" name="popup__form">
+                <input class="popup__input popup__input_name" type="text" name="popup__name">
+                <input class="popup__input popup__input_details" type="text" name="popup__details">
+                <input class="popup__save-button" type="submit" arial-label="save">Cохранить</button>
+            </form>
+        </div>
+    </div>
+    <script src="./pages/index.js" defer></script>
 </body>
-<script src="./pages/index.js" defer></script>
 </html>
