--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <form class="popup__form" name="popup__form">
                 <input class="popup__input popup__input_name" type="text" name="popup__name">
                 <input class="popup__input popup__input_details" type="text" name="popup__details">
-                <input class="popup__save-button" type="submit" arial-label="save">Cохранить</button>
+                <input class="popup__save-button" type="submit" arial-label="save" value="Cохранить">
             </form>
         </div>
     </div>
