--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <section class="profile">
-            <img class="profile__avatar" src="./images/Jacques-Yves_Cousteau.svg" alt="Жак-Ив Кусто">
+            <img class="profile__avatar" src="./images/Jacques-Yves_Cousteau.png" alt="Жак-Ив Кусто">
             <div class="profile__info">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
                 <p class="profile__details">Исследователь океана</p>
@@ -64,11 +64,11 @@
     <div class="popup">
         <div class="popup__container">
             <button class="popup__close-button" type="button" aria-label="close"></button>
-            <h2 class="popup__title" type="button">Редактировать профиль</h2>
+            <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__form" name="popup__form">
-                <input class="popup__input popup__input_name" type="text" name="popup__name">
-                <input class="popup__input popup__input_details" type="text" name="popup__details">
-                <input class="popup__save-button" type="submit" arial-label="save" value="Cохранить">
+                <input class="popup__input popup__input_type_name" type="text" name="popup__name">
+                <input class="popup__input popup__input_type_details" type="text" name="popup__details">
+                <input class="popup__save-button" type="submit" value="Cохранить">
             </form>
         </div>
     </div>
