--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
         </section>
         <section class="location">
             <ul class="location__elements">
-                <!--  <template id="card">
+             <template id="card">
                 <li class="element">
-                    <img class="element__image" alt="Виноградник">
+                    <img class="element__image">
                     <h2 class="element__title"></h2>
+                    <button class="element__trash-button" type="button" aria-label="trash"></button>
                     <button class="element__like-button" type="button" aria-label="like"></button>
                 </li>
             </template>
-               <li class="element">
+                <!--  <li class="element">
                     <img class="element__image" src="./images/riefs.jpg" alt="Риф вид сверху">
                     <h2 class="element__title">Большой Барьерный риф</h2>
                     <button class="element__like-button" type="button" aria-label="like"></button>
@@ -90,6 +91,12 @@
     <div class="popup popup_type_view">
         <div class="popup__container popup__container_image">
             <button class="popup__close-button popup__close-button_type_image" type="button" aria-label="close"></button>
+            <template id="image_content">
+                <div class="popup__template">
+                    <img class="popup__image">
+                    <h2 class="popup__title popup__title_full"></h2>
+                </div>
+            </template>
         </div>
     </div>
     <script src="./pages/index.js" defer></script>
