--- a/index.html
+++ b/index.html
@@ -24,42 +24,16 @@
         </section>
         <section class="location">
             <ul class="location__elements">
-             <template id="card">
-                <li class="element">
-                    <img class="element__image">
-                    <h2 class="element__title"></h2>
-                    <button class="element__trash-button" type="button" aria-label="trash"></button>
-                    <button class="element__like-button" type="button" aria-label="like"></button>
-                </li>
-            </template>
-                <!--  <li class="element">
-                    <img class="element__image" src="./images/riefs.jpg" alt="Риф вид сверху">
-                    <h2 class="element__title">Большой Барьерный риф</h2>
-                    <button class="element__like-button" type="button" aria-label="like"></button>
-                </li>
-                <li class="element">
-                    <img class="element__image" src="./images/amazon.jpg" alt="Река Амазонка">
-                    <h2 class="element__title">Амазония</h2>
-                    <button class="element__like-button" type="button" aria-label="like"></button>
-                </li>
-                <li class="element">
-                    <img class="element__image" src="./images/madagacsar.jpg" alt="Африканский пейзаж">
-                    <h2 class="element__title">Мадагаскар</h2>
-                    <button class="element__like-button" type="button" aria-label="like"></button>
-                </li>
-                <li class="element">
-                    <img class="element__image" src="./images/new_zealand.jpg" alt="Утес">
-                    <h2 class="element__title">Новая Зеландия</h2>
-                    <button class="element__like-button" type="button" aria-label="like"></button>
-                </li>
-                <li class="element">
-                    <img class="element__image" src="./images/antarctica.jpg" alt="Пингвины купаются">
-                    <h2 class="element__title">Антарктида</h2>
-                    <button class="element__like-button" type="button" aria-label="like"></button>
-                </li> -->
+                <template id="cardTemplate">
+                    <li class="element">
+                        <img class="element__image">
+                        <h2 class="element__title"></h2>
+                        <button class="element__trash-button" type="button" aria-label="trash" id="trash"></button>
+                        <button class="element__like-button" type="button" aria-label="like" id="like"></button>
+                    </li>
+                </template>
             </ul>
         </section>
-
     </main>
     <footer class="footer">
         <p class="footer__sign">&#169; 2023 Mesto Russia</p>
@@ -90,13 +64,12 @@
     </div>
     <div class="popup popup_type_view">
         <div class="popup__container popup__container_image">
-            <button class="popup__close-button popup__close-button_type_image" type="button" aria-label="close"></button>
-            <template id="image_content">
+            <button class="popup__close-button popup__close-button_type_image" type="button"
+                aria-label="close"></button>
                 <div class="popup__template">
                     <img class="popup__image">
                     <h2 class="popup__title popup__title_full"></h2>
                 </div>
-            </template>
         </div>
     </div>
     <script src="./pages/index.js" defer></script>
