--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
         </div>
     </div>
 
-    <script src="./pages/validate.js"></script>
-    <script src="./pages/index.js"></script>
+    <script type="module" src="./pages/index.js"></script>
 
 </body>
 
 </html>
+
+export 
