Добавила скрол и текста ошибки и перенесла index js

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <form class="popup__form popup__form_type_add" name="popup__form" novalidate>
                 <input class="popup__input popup__input_type_title" type="text" minlength="2" maxlength="30" name="popup__title" id="title"
                     placeholder="Название" required>
-                <span class="popup__error"  id="title-error"></span>
+                <span class="popup__error"  id="title-error">iuefwglufewgluwefliguefwliugeflhflueghflghelfh;euhf;oiehf;liehj.flijelifj.leijf</span>
                 <input class="popup__input popup__input_type_link" type="url" name="popup__link" id="link"
                     placeholder="Сылка на картинку" required>
                 <span id="link-error" class="popup__error"></span>
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <script type="module" src="./pages/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
 
 </body>
 
