--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
     <title>MESTO</title>
 </head>
 
 <body class="page">
     <header class="header">
-        <img class="header__logo" src="./images/logo.svg" alt="МЕСТО">
+        <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="МЕСТО">
     </header>
     <main>
         <section class="profile">
-            <img class="profile__avatar" src="./images/Jacques-Yves_Cousteau.png" alt="Жак-Ив Кусто">
+            <img class="profile__avatar" src="<%=require('./images/Jacques-Yves_Cousteau.png')%>" alt="Жак-Ив Кусто">
             <div class="profile__info">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
                 <p class="profile__details">Исследователь океана</p>
@@ -43,9 +42,9 @@
             <button class="popup__close-button popup__close-button_type_edit" type="button" aria-label="close"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__form  popup__form_type_edit" name="popup__form" novalidate>
-                <input class="popup__input popup__input_type_name" type="text" minlength="2" maxlength="40" name="popup__name" id="name" required>
+                <input class="popup__input popup__input_type_name" type="text" minlength="2" maxlength="40" name="name" id="name" required>
                 <span id="name-error" class="popup__error"></span>
-                <input class="popup__input popup__input_type_details" type="text" minlength="2" maxlength="200" name="popup__details" id="details" required>
+                <input class="popup__input popup__input_type_details" type="text" minlength="2" maxlength="200" name="details" id="details" required>
                 <span id="details-error" class="popup__error"></span>
                 <button class="popup__save-button" type="submit">Cохранить</button>
             </form>
@@ -58,7 +57,7 @@
             <form class="popup__form popup__form_type_add" name="popup__form" novalidate>
                 <input class="popup__input popup__input_type_title" type="text" minlength="2" maxlength="30" name="popup__title" id="title"
                     placeholder="Название" required>
-                <span class="popup__error"  id="title-error">iuefwglufewgluwefliguefwliugeflhflueghflghelfh;euhf;oiehf;liehj.flijelifj.leijf</span>
+                <span class="popup__error"  id="title-error"></span>
                 <input class="popup__input popup__input_type_link" type="url" name="popup__link" id="link"
                     placeholder="Сылка на картинку" required>
                 <span id="link-error" class="popup__error"></span>
@@ -76,8 +75,6 @@
                 </div>
         </div>
     </div>
-
-    <script type="module" src="./scripts/index.js"></script>
 
 </body>
 
