--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
             <form class="popup__form  popup__form_type_edit" name="popup__form" novalidate>
                 <input class="popup__input popup__input_type_name" type="text" minlength="2" maxlength="40" name="name" id="name" required>
                 <span id="name-error" class="popup__error"></span>
-                <input class="popup__input popup__input_type_link" type="text" minlength="2" maxlength="200" name="link" id="link" required>
-                <span id="link-error" class="popup__error"></span>
+                <input class="popup__input popup__input_type_link" type="text" minlength="2" maxlength="200" name="link" id="details" required>
+                <span id="details-error" class="popup__error"></span>
                 <button class="popup__save-button" type="submit">Cохранить</button>
             </form>
         </div>
@@ -55,9 +55,9 @@
             <button class="popup__close-button popup__close-button_type_add" type="button" aria-label="Закрыть"></button>
             <h2 class="popup__title">Новое место</h2>
             <form class="popup__form popup__form_type_add" name="popup__form" novalidate>
-                <input class="popup__input popup__input_type_title" type="text" minlength="2" maxlength="30" name="name" id="name"
+                <input class="popup__input popup__input_type_title" type="text" minlength="2" maxlength="30" name="name" id="title"
                     placeholder="Название" required>
-                <span class="popup__error"  id="name-error"></span>
+                <span class="popup__error"  id="title-error"></span>
                 <input class="popup__input popup__input_type_link" type="url" name="link" id="link"
                     placeholder="Сcылка на картинку" required>
                 <span id="link-error" class="popup__error"></span>
