--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,14 @@
     </header>
     <main>
         <section class="profile">
-            <img class="profile__avatar" src="<%=require('./images/Jacques-Yves_Cousteau.png')%>" alt="Жак-Ив Кусто">
+            <button class="profile__change-avatar-button" type="button" aria-label="Изменить автар">
+                <img class="profile__avatar" src="#"
+                    alt="Аватар профиля">
+            </button>
             <div class="profile__info">
-                <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <p class="profile__details">Исследователь океана</p>
-                <button class="profile__edit-button" type="button" aria-label="Изменить"></button>
+                <h1 class="profile__name"></h1>
+                <p class="profile__details"></p>
+                <button class="profile__edit-button" type="button" aria-label="Изменить данные пользователя"></button>
             </div>
             <button class="profile__add-button" type="button" aria-label="Добавить"></button>
         </section>
@@ -29,6 +32,7 @@
                         <h2 class="element__title"></h2>
                         <button class="element__trash-button" type="button" aria-label="Удалить" id="trash"></button>
                         <button class="element__like-button" type="button" aria-label="Нравится" id="like"></button>
+                        <span class="element__counter"></span>
                     </li>
                 </template>
             </ul>
@@ -39,12 +43,14 @@
     </footer>
     <div class="popup popup_type_edit">
         <div class="popup__container">
-            <button class="popup__close-button popup__close-button_type_edit" type="button" aria-label="Закрыть"></button>
+            <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__form  popup__form_type_edit" name="popup__form" novalidate>
-                <input class="popup__input popup__input_type_name" type="text" minlength="2" maxlength="40" name="name" id="name" required>
+                <input class="popup__input popup__input_type_name" type="text" minlength="2" maxlength="40" name="name"
+                    id="name" required>
                 <span id="name-error" class="popup__error"></span>
-                <input class="popup__input popup__input_type_link" type="text" minlength="2" maxlength="200" name="link" id="details" required>
+                <input class="popup__input popup__input_type_link" type="text" minlength="2" maxlength="200" name="details"
+                    id="details" required>
                 <span id="details-error" class="popup__error"></span>
                 <button class="popup__save-button" type="submit">Cохранить</button>
             </form>
@@ -52,12 +58,12 @@
     </div>
     <div class="popup popup_type_add">
         <div class="popup__container">
-            <button class="popup__close-button popup__close-button_type_add" type="button" aria-label="Закрыть"></button>
+            <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
             <h2 class="popup__title">Новое место</h2>
             <form class="popup__form popup__form_type_add" name="popup__form" novalidate>
-                <input class="popup__input popup__input_type_title" type="text" minlength="2" maxlength="30" name="name" id="title"
-                    placeholder="Название" required>
-                <span class="popup__error"  id="title-error"></span>
+                <input class="popup__input popup__input_type_title" type="text" minlength="2" maxlength="30" name="title"
+                    id="title" placeholder="Название" required>
+                <span class="popup__error" id="title-error"></span>
                 <input class="popup__input popup__input_type_link" type="url" name="link" id="link"
                     placeholder="Сcылка на картинку" required>
                 <span id="link-error" class="popup__error"></span>
@@ -67,12 +73,32 @@
     </div>
     <div class="popup popup_type_view">
         <div class="popup__container popup__container_image">
-            <button class="popup__close-button popup__close-button_type_image" type="button"
-                aria-label="Закрыть"></button>
-                <div class="popup__template">
-                    <img class="popup__image">
-                    <h2 class="popup__title popup__title_full"></h2>
-                </div>
+            <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
+            <div class="popup__template">
+                <img class="popup__image">
+                <h2 class="popup__title popup__title_full"></h2>
+            </div>
+        </div>
+    </div>
+    <div class="popup popup_type_delete">
+        <div class="popup__container popup__container_type_delete">
+            <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
+            <h2 class="popup__title popup__title_type_delete">Вы уверены?</h2>
+            <form class="popup__form  popup__form_type_delete" name="popup__form" novalidate>
+                <button class="popup__save-button popup_save-button_type_delete" type="submit">Да</button>
+            </form>
+        </div>
+    </div>
+    <div class="popup popup_type_avatar">
+        <div class="popup__container popup__container_type_avatar">
+            <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
+            <h2 class="popup__title popup__title_type_avatar">Обновить аватар</h2>
+            <form class="popup__form  popup__form_type_avatar" name="popup__form" novalidate>
+                <input class="popup__input popup__input_type_avatar" type="url" name="avatar" id="avatar"
+                    placeholder="Сcылка на картинку" required>
+                <span id="avatar-error" class="popup__error"></span>
+                <button class="popup__save-button popup_save-button_type_avatar" type="submit">Cохранить</button>
+            </form>
         </div>
     </div>
 
