--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                         <h2 class="element__title"></h2>
                         <button class="element__trash-button" type="button" aria-label="Удалить" id="trash"></button>
                         <button class="element__like-button" type="button" aria-label="Нравится" id="like"></button>
-                        <span class="element__counter"></span>
+                        <span class="element__counter">0\</span>
                     </li>
                 </template>
             </ul>
@@ -85,7 +85,7 @@
             <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
             <h2 class="popup__title popup__title_type_delete">Вы уверены?</h2>
             <form class="popup__form  popup__form_type_delete" name="popup__form" novalidate>
-                <button class="popup__save-button popup_save-button_type_delete" type="submit">Да</button>
+                <button class="popup__save-button popup__save-button_type_delete" type="submit">Да</button>
             </form>
         </div>
     </div>
@@ -97,7 +97,7 @@
                 <input class="popup__input popup__input_type_avatar" type="url" name="avatar" id="avatar"
                     placeholder="Сcылка на картинку" required>
                 <span id="avatar-error" class="popup__error"></span>
-                <button class="popup__save-button popup_save-button_type_avatar" type="submit">Cохранить</button>
+                <button class="popup__save-button popup__save-button_type_avatar" type="submit">Cохранить</button>
             </form>
         </div>
     </div>
